# files-task-tests

./: CMakeLists.txt  README.md  hello.bash
.github/workflows/: bash.yml  cmake.yml
tests/: test_backup.bash  test_rmtrash.bash  test_untrash.bash  test_upback.bash
